=== v0.1.59 ===
- Add HTTPS to Tor
- SSDs skip QuickSync by default
- Add lndmanage tool
- Custom LND Config
- Bug fix: SSH key and PW generation, local upgrades

=== v0.1.58 ===
- Add improved debug info
- View Bitcoin debug log on settings page
- Improve Blockchain and QuickSync reset options
- Improve BTC RPC Explorer settings
- Bug fixes

=== v0.1.56 / 0.1.57 ===
- Automatically enable HTTPS service
- Allow port 443 through firewall

=== v0.1.55 ===
- Add HTTPS option for connecting to web GUI
- Add Bitcoin REST API Access via Tor
- Add default password warning

=== v0.1.54 ===
- Cyclic reboot bug fix for SSD driver detection

=== v0.1.53 ===
 - Upgrade LND to v0.8.0 beta
 - PGP verify LND and BTC for each upgrade
 - Improve SSD support for Raspberry Pi 4

=== v0.1.52 ===
- Fix bug with device product key check
- Improve drive mounting on Raspis w/ SSDs

=== v0.1.51 ===
- Logging and RAM tweaks for Rock64
- Add ngrok for debugging
- Upgrade RTL to 0.5.1

=== v0.1.50 ===
- Big fixes for myNode VM (still beta)
- Display footer on status page

=== v0.1.49 ===
- Update BTC RPC Explorer
- Add way to customize Bitcoin config
- Add beta x86 VM setup
- Improve QuickSync uploader tool
- Improve console logging
- Add more info on Electrum Server page

=== v0.1.48 ===
- Add script to check for invalid blocks and auto-correct
- Bug fixes
- Improve logging
- DNS improvements

=== v0.1.47 ===
- Improve Info on Using Electrum Server
- Add Guide Links
- Improve SSD power options

=== v0.1.46 ===
- Improve VPN consistency between device reboots
- Tweak DNS settings

=== v0.1.45 ===
- Improve Tor webpage information
- Add Tor services for RTL, LND Hub, GUI Access, and more

=== v0.1.44 ===
- Add changelog to settings page
- Add shutdown option on settings page
- LND Admin password will match the overall myNode password

=== v0.1.43 ===
- Initial changelog
- Add all the features!
- Bitcoin Core
- Lightning Daemon
- Electrum Server
- VPN
- Tor
- LND Hub
- LND Connect
- RTL