@@ -5,6 +5,7 @@ from bitcoin_info import *
 #from bitcoin.wallet import *
 from subprocess import check_output, check_call
 from electrum_functions import *
+from user_management import check_logged_in
 import socket
 import hashlib
 import json
@@ -98,6 +99,8 @@ def search(search_term):
 ### Page functions
 @mynode_bitcoind.route("/bitcoind")
 def bitcoind_status_page():
+    check_logged_in()
+
     # Get current information
     try:
         info = get_bitcoin_blockchain_info()
@@ -175,6 +178,8 @@ def bitcoind_status_page():
 
 @mynode_bitcoind.route("/explorer")
 def bitcoind_explorer_page():
+    check_logged_in()
+
     # Get current information
     try:
         info = get_bitcoin_blockchain_info()
@@ -215,6 +220,8 @@ def bitcoind_explorer_page():
 
 @mynode_bitcoind.route("/explorer/search", methods=['POST'])
 def search_page():
+    check_logged_in()
+
     if not request:
         return redirect("/explorer")
 
@@ -246,6 +253,8 @@ def search_page():
 
 @mynode_bitcoind.route("/explorer/tx/<txid>")
 def tx_page(txid):
+    check_logged_in()
+
     try:
         # Get info
         electrum_data = get_from_electrum("blockchain.transaction.get", [txid, True])
@@ -313,6 +322,8 @@ def tx_page(txid):
 
 @mynode_bitcoind.route("/explorer/block/<block_hash>")
 def block_page(block_hash):
+    check_logged_in()
+
     try:
         # Get info
         rpc_user = get_bitcoin_rpc_username()
@@ -351,6 +362,8 @@ def block_page(block_hash):
 
 @mynode_bitcoind.route("/explorer/addr/<addr>")
 def address_page(addr):
+    check_logged_in()
+    
     try:
         # Get addr info
         script_hash = get_scripthash_for_address(addr)
