@@ -5,6 +5,7 @@ from bitcoin_info import *
 from lightning_info import *
 from settings import reboot_device
 from device_info import is_community_edition
+from user_management import check_logged_in
 import base64
 import subprocess
 import json
@@ -38,6 +39,8 @@ def get_image_contents(filename):
 # Flask Pages
 @mynode_lnd.route("/lnd")
 def page_lnd():
+    check_logged_in()
+
     height = 0
     alias = "empty"
     num_peers = "0"
@@ -119,10 +122,13 @@ def page_lnd():
 
 @mynode_lnd.route("/lnd/tls.cert")
 def lnd_tls_cert():
+    check_logged_in()
     return send_from_directory(directory="/mnt/hdd/mynode/lnd/", filename="tls.cert")
 
 @mynode_lnd.route("/lnd/admin.macaroon", methods=["POST"])
 def lnd_macaroon():
+    check_logged_in()
+
     p = pam.pam()
     pw = request.form.get('password_download_macaroon')
     if pw == None or p.authenticate("admin", pw) == False:
@@ -134,10 +140,12 @@ def lnd_macaroon():
 
 @mynode_lnd.route("/lnd/channel.backup")
 def lnd_channel_backup():
+    check_logged_in()
     return send_from_directory(directory="/home/bitcoin/lnd_backup/", filename="channel.backup")
 
 @mynode_lnd.route("/lnd/create_wallet")
 def page_lnd_create_wallet():
+    check_logged_in()
 
     try:
         seed = gen_new_wallet_seed()
@@ -157,6 +165,8 @@ def page_lnd_create_wallet():
 
 @mynode_lnd.route("/lnd/create_wallet_with_seed", methods=['GET','POST'])
 def page_lnd_create_wallet_with_seed():
+    check_logged_in()
+
     # Load page
     if request.method == 'GET':
         templateData = {
@@ -177,6 +187,8 @@ def page_lnd_create_wallet_with_seed():
 
 @mynode_lnd.route("/lnd/create_wallet_confirm", methods=['GET','POST'])
 def page_lnd_create_wallet_confirm():
+    check_logged_in()
+
     # Load page
     if request.method == 'GET':
         templateData = {
@@ -204,6 +216,8 @@ def page_lnd_create_wallet_confirm():
 
 @mynode_lnd.route("/lnd/lndconnect", methods=["GET","POST"])
 def page_lnd_lndconnect():
+    check_logged_in()
+
     # Load page
     if request.method == 'GET':
         return redirect(url_for(".page_lnd"))
@@ -252,6 +266,8 @@ def page_lnd_lndconnect():
 
 @mynode_lnd.route("/lnd/change_alias", methods=["POST"])
 def page_lnd_change_alias():
+    check_logged_in()
+    
     # Load page
     p = pam.pam()
     pw = request.form.get('password_change_alias')
