@@ -1,0 +1,30 @@
+<!DOCTYPE html lang="en">
+    <head>
+        <title>myNode Login</title>
+        <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename="css/mynode.css")}}">
+        <link href="{{ url_for('static', filename="jquery_ui/jquery-ui.css")}}" rel="stylesheet">
+        <meta http-equiv="Content-Language" content="en">
+        <meta name="google" content="notranslate">
+        <script src="{{ url_for('static', filename="js/jquery-3.3.1.min.js")}}"></script>
+        <script src="{{ url_for('static', filename="jquery_ui/jquery-ui.js")}}"></script>
+        <script src="{{ url_for('static', filename="js/mynode.js")}}"></script>
+     </head>
+
+    <body>
+        <div class="logo_header"><a href="/"><img class="logo_image" src="{{ url_for('static', filename="images/logo.png")}}"/></a></div>
+
+        <div class="main_header">Login</div>
+
+        {% include 'includes/message_display.html' %}
+
+        <div class="login_div">
+            <form action="/login" method="POST">
+                <input type="password" id="password" name="password" class="ui-corner-all login_password"/>
+                <br/>
+                <input type="submit" id="login_submit" value="Login" class="ui-button ui-widget ui-corner-all login_submit"/>
+            </form>
+        </div>
+
+     </body>
+</html>
